--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2018"
 [dependencies]
 clipboard = "0.5.0"
 quick-xml = "0.17.2"
+clap = "2.33.0"
+
+# Logging support
+log = "0.4"
+pretty_env_logger = "0.3.1"
